--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -37,3 +37,6 @@ jobs:
         env:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET}}
         run: aws deploy push --application-name ${{ secrets.AWS_CODE_DEPLOY_APPLICATION }} --ignore-hidden-files --s3-location s3://$AWS_S3_BUCKET/book-management-system/$GITHUB_SHA.zip --source .
+
+      - name: CodeDeploy가 EC2에 배포
+        run: aws deploy create-deployment --application-name ${{ secrets.AWS_CODE_DEPLOY_APPLICATION }} --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name ${{ secrets.AWS_CODE_DEPLOY_GROUP }} --s3-location bucket=${{ secrets.AWS_S3_BUCKET }},key=book-management-system/$GITHUB_SHA.zip,bundleType=zip
